<resources>
    <string name="app_name">My Metal</string>
    <string name="name">Name</string>
    <string name="product"> </string>
    <string name="checkBox0"> </string>
    <string name="checkBox1"> </string>
    <string name="checkBox2"> </string>
    <string name="checkBox3"> </string>
    <string name="toggleOff">doesn\'t Like</string>
    <string name="toggleOn">likes</string>
    <string name="generate">\\m/</string>
    <string name="update">Update</string>
    <string name="imageDescription">metal hand horns</string>


    <!--Spinner-->
    <string-array name="genres">
        <item>Select a Genre</item>
        <item>Hardcore</item>
        <item>Metalcore</item>
        <item>Deathcore</item>
        <item>Classic</item>
    </string-array>


    <string-array name="hardcoreBands">
        <item>Parkway Drive</item>
        <item>August Burns Red</item>
        <item>As I Lay Dying </item>
        <item>Lamb of God</item>
    </string-array>

    <string-array name="metalcoreBands">
        <item>Bring Me The Horizon</item>
        <item>Asking Alexandria</item>
        <item>The Devil Wears Prada</item>
        <item>Architects</item>
    </string-array>

    <string-array name="deathcoreBands">
        <item>Born of Osiris</item>
        <item>Veil of Maya</item>
        <item>Job for a Cowboy</item>
        <item>Chelsea Grin</item>
    </string-array>

    <string-array name="classicBands">
        <item>Metallica</item>
        <item>Iron Maiden</item>
        <item>Black Sabbath</item>
        <item>Slayer</item>
    </string-array>

</resources>
